// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixin-light-dark transforms light and dark mixins correctly 1`] = `
"
[data-serrah-color-scheme='light'] .demo {
    color: red
}
  [data-serrah-color-scheme='dark'] .demo {
    color: blue
}
"
`;

exports[`mixin-light-dark transforms light-root and dark-root mixins correctly 1`] = `
"
:root[data-serrah-color-scheme='light'] {
    color: red
}
  :root[data-serrah-color-scheme='dark'] {
    color: blue
}
"
`;

exports[`mixin-light-dark transforms where-light and where-dark mixins correctly 1`] = `
"
:where([data-serrah-color-scheme='light']) .demo {
    color: red
}
  :where([data-serrah-color-scheme='dark']) .demo {
    color: blue
}
"
`;

exports[`mixin-light-dark transforms where-light-root and where-dark-root mixins correctly 1`] = `
"
:root:where(:root[data-serrah-color-scheme='light']) {
    color: red
}
  :root:where(:root[data-serrah-color-scheme='dark']) {
    color: blue
}
"
`;
